feature: inserção de  traduções

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,3 +1,6 @@
 {
-    "title": "NASA Images"
+  "About": {
+    "title": "Welcome!",
+    "subtitle": "This is an application to explore NASA images."
+  }
 }
